存储颜色 获取激活tab 改背景色

--- a/simple-ext/browser_action/popup.html
+++ b/simple-ext/browser_action/popup.html
@@ -1,11 +1,20 @@
 <html>
 
+<head>
+    <style>
+        button {
+            width: 60px;
+            height: 30px;
+            outline: none;
+            border-radius: 5px;
+            background: 1px solid #f2fff2 ;
+        }
+    </style>
+</head>
+
 <body>
-    <h1>Hello simple-ext</h1>
-    <p>This is simple-ext popup.</p>
+    <button id="changeColor">change</button>
+    <script src="popup.js"></script>
 </body>
-<!-- <script>
-    console.log('simple-ext popup')
-    // throw new Error('simple-ext popup error test')
-</script> -->
+
 </html>
