--- a/simple-ext/options/index.html
+++ b/simple-ext/options/index.html
@@ -5,7 +5,7 @@
     <title>simple-ext</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style>
-        button {
+        #buttonDiv button {
             height: 30px;
             width: 30px;
             outline: none;
@@ -19,6 +19,14 @@
     <div>
         <p>选择一个不同的颜色</p>
     </div>
+    <h2 class="title">
+        手动弹出窗口
+    </h2>
+    <div id="popupBtn"></div>
+    <h2 class="title">
+        设置title
+    </h2>
+    <div id="titleBtn"></div>
     
 </body>
 <script src="index.js"></script>
