devtool panel  sidebar

--- a/simple-ext/devtools/panel.html
+++ b/simple-ext/devtools/panel.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <h1>hello panel</h1>
+    <h1>hello panel</h1><button id="check_jquery">检查jquery</button>
+    <button id="get_all_resources">获取所有资源</button>
+    <script src="panel.js"></script>
+    
 </body>
 
 </html>
