pop 和 bg 直接调用方法

--- a/simple-ext/browser_action/popup.html
+++ b/simple-ext/browser_action/popup.html
@@ -1,9 +1,13 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <style>
+        body{
+            width: 300px;
+        }
         button {
-            width: 60px;
+            width: unset;
             height: 30px;
             outline: none;
             border-radius: 5px;
