--- a/simple-ext/options/index.html
+++ b/simple-ext/options/index.html
@@ -20,7 +20,7 @@
         <p>选择一个不同的颜色</p>
     </div>
     <h2 class="title">
-        手动弹出窗口
+        手动设置弹出窗口
     </h2>
     <div id="popupBtn"></div>
     <h2 class="title">
